complete create and edit mega admin

--- a/views/FestivoModule.ejs
+++ b/views/FestivoModule.ejs
@@ -34,4 +34,4 @@
   </main>
 </body>
 <%- include('./layouts/footer'); -%>
-<script src="/js/FestivoModule.js"></script>
+<script src="/js/MEGA/FestivoModule.js"></script>
