--- a/views/FestivoSchool.ejs
+++ b/views/FestivoSchool.ejs
@@ -35,4 +35,4 @@
   </main>
 </body>
 <%- include('./layouts/footer'); -%>
-<script src="/js/FestivoSchool.js"></script>
+<script src="/js/MEGA/FestivoSchool.js"></script>
