--- a/views/FestivoSuperadmin.ejs
+++ b/views/FestivoSuperadmin.ejs
@@ -19,8 +19,10 @@
             <thead>
               <tr>
                 <th>No.</th>
-                <th>Login Username</th>
                 <th>Nama Super Admin</th>
+                <th>Login Username</th>
+                <th>ID Sekolah</th>
+                <th>Sekolah</th>
                 <th></th>
               </tr>
             </thead>
@@ -35,4 +37,4 @@
   </main>
 </body>
 <%- include('./layouts/footer'); -%>
-<script src="/js/FestivoSuperadmin.js"></script>
+<script src="/js/MEGA/FestivoSuperadmin.js"></script>
