--- a/public/css/output.css
+++ b/public/css/output.css
@@ -791,6 +791,14 @@ video {
   width: 100%;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[230px\] {
+  width: 230px;
+}
+
 .min-w-\[400px\] {
   min-width: 400px;
 }
@@ -1273,10 +1281,6 @@ video {
 
 .text-white\/70 {
   color: rgb(255 255 255 / 0.7);
-}
-
-.text-white-80 {
-  color: rgba(255, 255, 255, 0.8);;
 }
 
 .opacity-0 {
