--- a/views/FestivoModule-Edit.ejs
+++ b/views/FestivoModule-Edit.ejs
@@ -7,7 +7,12 @@
   <main>
     <%- include('./layouts/MegaSidebar'); -%>
     <section id="topik-edit" class="min-h-screen bg-white rounded-tl-3xl p-8">
-      <p class="text-main font-bold text-2xl">Mengubah Data Module <span class="text-red-500 font-medium text-xs">* harus diisi</span></p>
+      <div class="flex justify-between">
+        <p class="text-main font-bold text-2xl">Mengubah Data Module <span class="text-red-500 font-medium text-xs">* harus diisi</span></p>
+        <form id="form-module-delete">
+          <button type="submit" class="py-2 px-8 bg-red-500 text-white rounded-lg text-sm mt-10">Hapus Module</button>
+        </form>
+      </div>
       <form id="form-module-edit" class="">
         <div id="bg-table-topik" class="h-max shadow-[0_0px_40px_-15px_rgba(0,0,0,0.2)] w-full mt-8 rounded-3xl p-8 bg-main">
           <div class="flex flex-col gap-4">
