--- a/views/FestivoSchool.ejs
+++ b/views/FestivoSchool.ejs
@@ -21,6 +21,7 @@
                 <th>No.</th>
                 <th>ID Sekolah</th>
                 <th>Nama Sekolah</th>
+                <th>Status</th>
                 <th></th>
               </tr>
             </thead>
