--- a/views/layouts/MegaNavbar.ejs
+++ b/views/layouts/MegaNavbar.ejs
@@ -17,7 +17,7 @@
         </div>
       </div>
     
-      <form action="/api/v1/admins/logout" method="post" class="">
+      <form action="/api/v1/festivo/logout" method="post" class="">
         <button id="button-logout" type="submit" class="text-main bg-[#fff1e4] px-5 py-1.5 rounded-full text-sm text-center">Keluar</button>
       </form>
     </div>
