--- a/public/css/input.css
+++ b/public/css/input.css
@@ -31,3 +31,27 @@ input[type="file"]::file-selector-button {
     padding: 0.3rem 0.7rem;
     cursor: pointer;
   }
+
+  div::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  /* Track */
+  div::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  
+  /* Handle */
+  div::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  div::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  input[type=date]::-webkit-calendar-picker-indicator, input[type=month]::-webkit-calendar-picker-indicator{
+    cursor: pointer;
+    background: url('/img/calendar.svg') no-repeat;
+  }
