--- a/public/css/output.css
+++ b/public/css/output.css
@@ -568,18 +568,6 @@ video {
   }
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
 .visible {
   visibility: visible;
 }
@@ -592,28 +580,12 @@ video {
   position: relative;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
 .bottom-10 {
   bottom: 2.5rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
 .left-1\/2 {
   left: 50%;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.top-0 {
-  top: 0px;
 }
 
 .top-8 {
@@ -624,18 +596,8 @@ video {
   z-index: 10;
 }
 
-.m-auto {
-  margin: auto;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
+.m-10 {
+  margin: 2.5rem;
 }
 
 .my-4 {
@@ -651,44 +613,16 @@ video {
   margin-bottom: 0.75rem;
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-
 .me-8 {
   margin-inline-end: 2rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ms-3 {
-  margin-inline-start: 0.75rem;
 }
 
 .ms-auto {
   margin-inline-start: auto;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
 .mt-10 {
   margin-top: 2.5rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
 }
 
 .mt-3 {
@@ -699,64 +633,24 @@ video {
   margin-top: 1rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-auto {
-  margin-top: auto;
-}
-
-.block {
-  display: block;
 }
 
 .flex {
   display: flex;
 }
 
-.inline-flex {
-  display: inline-flex;
-}
-
 .table {
   display: table;
-}
-
-.grid {
-  display: grid;
 }
 
 .hidden {
   display: none;
 }
 
-.h-4 {
-  height: 1rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
 .h-\[200px\] {
   height: 200px;
-}
-
-.h-\[35px\] {
-  height: 35px;
 }
 
 .h-\[60px\] {
@@ -767,65 +661,8 @@ video {
   height: 100%;
 }
 
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-\[20\%\] {
-  width: 20%;
-}
-
-.w-\[230px\] {
-  width: 230px;
-}
-
-.w-\[240px\] {
-  width: 240px;
-}
-
-.w-\[30\%\] {
-  width: 30%;
-}
-
 .w-\[300px\] {
   width: 300px;
-}
-
-.w-\[35\%\] {
-  width: 35%;
-}
-
-.w-\[35px\] {
-  width: 35px;
-}
-
-.w-\[360px\] {
-  width: 360px;
-}
-
-.w-\[50\%\] {
-  width: 50%;
 }
 
 .w-\[60px\] {
@@ -841,20 +678,12 @@ video {
   width: max-content;
 }
 
-.w-\[260px\] {
-  width: 260px;
-}
-
 .min-w-\[290px\] {
   min-width: 290px;
 }
 
 .min-w-\[400px\] {
   min-width: 400px;
-}
-
-.max-w-\[1030px\] {
-  max-width: 1030px;
 }
 
 .-translate-x-1\/2 {
@@ -866,28 +695,12 @@ video {
   cursor: pointer;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-col {
   flex-direction: column;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -896,10 +709,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .gap-10 {
@@ -912,14 +721,6 @@ video {
 
 .gap-3 {
   gap: 0.75rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
 }
 
 .gap-8 {
@@ -955,20 +756,12 @@ video {
   overflow: hidden;
 }
 
-.overflow-x-scroll {
-  overflow-x: scroll;
-}
-
 .rounded {
   border-radius: 0.25rem;
 }
 
 .rounded-2xl {
   border-radius: 1rem;
-}
-
-.rounded-3xl {
-  border-radius: 1.5rem;
 }
 
 .rounded-full {
@@ -979,33 +772,12 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
-.rounded-tl-3xl {
-  border-top-left-radius: 1.5rem;
-}
-
 .border {
   border-width: 1px;
 }
 
-.border-0 {
-  border-width: 0px;
-}
-
-.border-2 {
-  border-width: 2px;
-}
-
 .border-4 {
   border-width: 4px;
-}
-
-.border-\[\#2C7D5E\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(44 125 94 / var(--tw-border-opacity));
 }
 
 .border-\[\#DA8F4A\] {
@@ -1018,11 +790,6 @@ video {
   border-color: rgb(255 241 228 / var(--tw-border-opacity));
 }
 
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
 .border-main {
   --tw-border-opacity: 1;
   border-color: rgb(53 143 108 / var(--tw-border-opacity));
@@ -1033,21 +800,9 @@ video {
   border-color: rgb(127 29 29 / var(--tw-border-opacity));
 }
 
-.border-third {
+.border-slate-900 {
   --tw-border-opacity: 1;
-  border-color: rgb(62 154 118 / var(--tw-border-opacity));
-}
-
-.bg-\[\#000\]\/30 {
-  background-color: rgb(0 0 0 / 0.3);
-}
-
-.bg-\[\#000\]\/50 {
-  background-color: rgb(0 0 0 / 0.5);
-}
-
-.bg-\[\#418DFF\]\/20 {
-  background-color: rgb(65 141 255 / 0.2);
+  border-color: rgb(15 23 42 / var(--tw-border-opacity));
 }
 
 .bg-\[\#44A47F\]\/10 {
@@ -1059,11 +814,6 @@ video {
   background-color: rgb(232 244 239 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#F1F1F1\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 241 241 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#FC4545\]\/10 {
   background-color: rgb(252 69 69 / 0.1);
 }
@@ -1073,34 +823,14 @@ video {
   background-color: rgb(255 241 228 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#faebd7\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 235 215 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#fff1e4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 241 228 / var(--tw-bg-opacity));
 }
 
-.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .bg-main {
   --tw-bg-opacity: 1;
   background-color: rgb(53 143 108 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-red-500\/70 {
@@ -1111,27 +841,9 @@ video {
   background-color: rgb(239 68 68 / 0.8);
 }
 
-.bg-second {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 92 68 / var(--tw-bg-opacity));
-}
-
-.bg-third {
-  --tw-bg-opacity: 1;
-  background-color: rgb(62 154 118 / var(--tw-bg-opacity));
-}
-
-.bg-transparent {
-  background-color: transparent;
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#FEFEFE\]\/10 {
-  background-color: rgb(254 254 254 / 0.1);
 }
 
 .object-cover {
@@ -1139,36 +851,13 @@ video {
      object-fit: cover;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .p-4 {
   padding: 1rem;
-}
-
-.p-8 {
-  padding: 2rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }
 
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-
-.px-2\.5 {
-  padding-left: 0.625rem;
-  padding-right: 0.625rem;
 }
 
 .px-3 {
@@ -1184,11 +873,6 @@ video {
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .px-8 {
@@ -1216,11 +900,6 @@ video {
   padding-bottom: 0.375rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1231,24 +910,9 @@ video {
   padding-bottom: 0.625rem;
 }
 
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .py-6 {
@@ -1256,34 +920,8 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.py-\[10px\] {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.py-\[3px\] {
-  padding-top: 3px;
-  padding-bottom: 3px;
-}
-
-.pb-5 {
-  padding-bottom: 1.25rem;
-}
-
-.pb-8 {
-  padding-bottom: 2rem;
-}
-
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -1298,11 +936,6 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 
 .text-sm {
@@ -1328,20 +961,8 @@ video {
   font-weight: 300;
 }
 
-.font-medium {
-  font-weight: 500;
-}
-
 .font-normal {
   font-weight: 400;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.tracking-\[1\.4px\] {
-  letter-spacing: 1.4px;
 }
 
 .text-\[\#000\] {
@@ -1354,16 +975,6 @@ video {
   color: rgb(53 143 108 / var(--tw-text-opacity));
 }
 
-.text-\[\#3889E9\] {
-  --tw-text-opacity: 1;
-  color: rgb(56 137 233 / var(--tw-text-opacity));
-}
-
-.text-\[\#418DFF\] {
-  --tw-text-opacity: 1;
-  color: rgb(65 141 255 / var(--tw-text-opacity));
-}
-
 .text-\[\#954800\] {
   --tw-text-opacity: 1;
   color: rgb(149 72 0 / var(--tw-text-opacity));
@@ -1372,11 +983,6 @@ video {
 .text-\[\#DA8F4A\] {
   --tw-text-opacity: 1;
   color: rgb(218 143 74 / var(--tw-text-opacity));
-}
-
-.text-\[\#FBDA5B\] {
-  --tw-text-opacity: 1;
-  color: rgb(251 218 91 / var(--tw-text-opacity));
 }
 
 .text-green-500 {
@@ -1394,53 +1000,19 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-white\/70 {
-  color: rgb(255 255 255 / 0.7);
-}
-
-.text-white\/80 {
-  color: rgb(255 255 255 / 0.8);
-}
-
-.text-white\/90 {
-  color: rgb(255 255 255 / 0.9);
 }
 
 .opacity-0 {
   opacity: 0;
 }
 
-.shadow-\[0_0px_40px_-15px_rgba\(0\2c 0\2c 0\2c 0\.2\)\] {
-  --tw-shadow: 0 0px 40px -15px rgba(0,0,0,0.2);
-  --tw-shadow-colored: 0 0px 40px -15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-\[4\.0px_8\.0px_8\.0px_rgba\(0\2c 0\2c 0\2c 0\.38\)\] {
   --tw-shadow: 4.0px 8.0px 8.0px rgba(0,0,0,0.38);
   --tw-shadow-colored: 4.0px 8.0px 8.0px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.outline-none {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.ring-0 {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .filter {
@@ -1451,151 +1023,8 @@ video {
   transition-duration: 200ms;
 }
 
-.duration-300 {
-  transition-duration: 300ms;
-}
-
 html{
   font-family: "Inter", sans-serif;
-}
-
-.sidelist-selected {
-  border-start-start-radius: 9999px;
-  border-end-start-radius: 9999px;
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(53 143 108 / var(--tw-text-opacity));
-}
-
-body {
-  margin: 0;
-  background-color: #358f6c;
-  font-family: "Inter", sans-serif;
-}
-
-main {
-  padding: 0 0 0 2rem;
-  display: grid;
-  grid-template-columns: 0.2fr 1fr;
-}
-
-input[type="file"]::file-selector-button {
-  background-color: antiquewhite;
-  border: none;
-  color: #358f6c;
-  border-radius: 20px;
-  padding: 0.3rem 0.7rem;
-  cursor: pointer;
-}
-
-div::-webkit-scrollbar {
-  width: 8px;
-}
-
-/* Track */
-
-div::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-/* Handle */
-
-div::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-
-div::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-input[type=date]::-webkit-calendar-picker-indicator, input[type=month]::-webkit-calendar-picker-indicator{
-  cursor: pointer;
-  background: url('/img/calendar.svg') no-repeat;
-}
-
-.placeholder\:text-main::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(53 143 108 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-main::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(53 143 108 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-white-80::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.8);;
-}
-
-.placeholder\:text-white-80::placeholder {
-  color: rgba(255, 255, 255, 0.8);;
-}
-
-.after\:absolute::after {
-  content: var(--tw-content);
-  position: absolute;
-}
-
-.after\:left-\[2px\]::after {
-  content: var(--tw-content);
-  left: 2px;
-}
-
-.after\:top-0::after {
-  content: var(--tw-content);
-  top: 0px;
-}
-
-.after\:top-0\.5::after {
-  content: var(--tw-content);
-  top: 0.125rem;
-}
-
-.after\:h-5::after {
-  content: var(--tw-content);
-  height: 1.25rem;
-}
-
-.after\:w-5::after {
-  content: var(--tw-content);
-  width: 1.25rem;
-}
-
-.after\:rounded-full::after {
-  content: var(--tw-content);
-  border-radius: 9999px;
-}
-
-.after\:border::after {
-  content: var(--tw-content);
-  border-width: 1px;
-}
-
-.after\:border-gray-300::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.after\:bg-white::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.after\:transition-all::after {
-  content: var(--tw-content);
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.after\:content-\[\'\'\]::after {
-  --tw-content: '';
-  content: var(--tw-content);
 }
 
 .hover\:-translate-y-1:hover {
@@ -1608,113 +1037,6 @@ input[type=date]::-webkit-calendar-picker-indicator, input[type=month]::-webkit-
   border-color: rgb(218 143 74 / var(--tw-border-opacity));
 }
 
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-main\/80:hover {
-  background-color: rgb(53 143 108 / 0.8);
-}
-
-.hover\:bg-red-500\/80:hover {
-  background-color: rgb(239 68 68 / 0.8);
-}
-
-.focus\:border-white-60:focus {
-  border-color: rgba(255, 255, 255, 0.60);;
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:outline-1:focus {
-  outline-width: 1px;
-}
-
-.focus\:outline-main:focus {
-  outline-color: #358f6c;
-}
-
-.focus\:outline-white:focus {
-  outline-color: #fff;
-}
-
-.focus\:ring-0:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-1:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-main:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(53 143 108 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-white:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-white-60:focus {
-  --tw-ring-color: rgba(255, 255, 255, 0.60);;
-}
-
-.focus\:invalid\:border-pink-500:invalid:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(236 72 153 / var(--tw-border-opacity));
-}
-
-.focus\:invalid\:ring-pink-500:invalid:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(236 72 153 / var(--tw-ring-opacity));
-}
-
-.disabled\:bg-main\/50:disabled {
-  background-color: rgb(53 143 108 / 0.5);
-}
-
-.disabled\:bg-red-500\/50:disabled {
-  background-color: rgb(239 68 68 / 0.5);
-}
-
-.peer:checked ~ .peer-checked\:bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
-.peer:checked ~ .peer-checked\:after\:translate-x-full::after {
-  content: var(--tw-content);
-  --tw-translate-x: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.peer:checked ~ .peer-checked\:after\:border-white::after {
-  content: var(--tw-content);
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-
 .peer:hover ~ .peer-hover\:opacity-100 {
   opacity: 1;
-}
-
-@media (prefers-color-scheme: dark) {
-  .dark\:border-gray-600 {
-    --tw-border-opacity: 1;
-    border-color: rgb(75 85 99 / var(--tw-border-opacity));
-  }
-
-  .dark\:bg-gray-700 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-  }
 }
