--- a/views/Muslim-Raya.ejs
+++ b/views/Muslim-Raya.ejs
@@ -1,39 +1,38 @@
 <%- include('./layouts/header'); -%>
 
 <p class="font-bold text-center text-2xl mt-10">API MUSLIM-RAYA</p>
-<div class="grid grid-cols-3">
-    <div class="m-5 p-5 rounded-lg border-2 border-slate-900 flex flex-col justify-between min-h-[200px]">
+<div class="grid grid-cols-3 mt-10">
+    <div class="m-5 p-5 rounded-lg border-slate-900 flex flex-col justify-between min-h-[200px] shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
         <div class="">
-            <p class="font-bold">Login With Google</p>
-            <p class="text-sm mt-2">METHOD: GET</p>
-            <p class="text-sm">URL: https://api.festivo.co/muslim-raya/v1/players/auth/google</p>
+            <p class="font-bold">Create New Player</p>
+            <p class="text-sm mt-2">METHOD: POST</p>
+            <p class="text-sm">URL: https://api.festivo.co/muslim-raya/v1/players/</p>
         </div>
-        <a href="/muslim-raya/v1/players/auth/google" class="mt-auto mt-4">
-            <button class="border border-slate-900 rounded-lg px-4 py-2.5">Login with Google</button>
-        </a>
+        <a href="https://www.postman.com/restless-station-41384/workspace/mypublicworkspace/collection/17399437-40b158ac-d6ca-418a-8890-5c165e49bcee?action=share&creator=17399437" class="rounded-lg px-4 py-2.5 w-max mt-4 bg-[#ff6c36] text-sm font-bold text-white">Coba di Postman</a>
     </div>
-    <div class="m-5 p-5 rounded-lg border-2 border-slate-900 flex flex-col justify-between min-h-[200px]">
+    <div class="m-5 p-5 rounded-lg border-slate-900 flex flex-col justify-between min-h-[200px] shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
         <div>
             <p class="font-bold">Get All Players</p>
             <p class="text-sm mt-2">METHOD: GET</p>
             <p class="text-sm">URL: https://api.festivo.co/muslim-raya/v1/players/</p>
         </div>
-        <a href="https://api.festivo.co/muslim-raya/v1/players/" class="border border-slate-900 rounded-lg px-4 py-2.5 w-max mt-4">Kunjungi Link</a>
+        <a href="https://api.festivo.co/muslim-raya/v1/players/" class="rounded-lg px-4 py-2.5 w-max mt-4 bg-[#4970F4] text-sm font-bold text-white">Kunjungi Link</a>
     </div>
-    <div class="m-5 p-5 rounded-lg border-2 border-slate-900 flex flex-col justify-between min-h-[200px]">
+    <div class="m-5 p-5 rounded-lg border-slate-900 flex flex-col justify-between min-h-[200px] shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
         <div>
             <p class="font-bold">Get Player By Id</p>
             <p class="text-sm mt-2">METHOD: GET</p>
             <p class="text-sm">URL: https://api.festivo.co/muslim-raya/v1/players/<span style="color: red;">{Id}</span></p>
         </div>
-        <a href="https://api.festivo.co/muslim-raya/v1/players/123" class="border border-slate-900 rounded-lg px-4 py-2.5 w-max mt-4">Kunjungi Link</a>
+        <a href="https://api.festivo.co/muslim-raya/v1/players/123" class="rounded-lg px-4 py-2.5 w-max mt-4 bg-[#4970F4] text-sm font-bold text-white">Kunjungi Link</a>
     </div>
-    <div class="m-5 p-5 rounded-lg border-2 border-slate-900 flex flex-col justify-between min-h-[200px]">
+    <div class="m-5 p-5 rounded-lg border-slate-900 flex flex-col justify-between min-h-[200px] shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
         <div>
             <p class="font-bold">Update By Id</p>
             <p class="text-sm mt-2">METHOD: PUT</p>
             <p class="text-sm">URL: https://api.festivo.co/muslim-raya/v1/players/<span style="color: red;">{Id}</span></p>
         </div>
+        <a href="https://www.postman.com/restless-station-41384/workspace/mypublicworkspace/collection/17399437-40b158ac-d6ca-418a-8890-5c165e49bcee?action=share&creator=17399437" class="rounded-lg px-4 py-2.5 w-max mt-4 bg-[#ff6c36] text-sm font-bold text-white">Coba di Postman</a>
     </div>
 </div>
 
