--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -1,14 +1,14 @@
 <%- include('./layouts/header'); -%>
 
 <p class="font-bold text-center text-2xl mt-10">API Gateway</p>
-<div class="grid grid-cols-3">
-    <div class="m-5 p-5 rounded-lg border-2 border-slate-900 flex flex-col justify-between min-h-[150px]">
+<div class="grid grid-cols-3 mt-10">
+    <div class="m-5 p-5 rounded-lg flex flex-col justify-between min-h-[150px] shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
         <div class="">
             <p class="font-bold">API Muslim Raya</p>
+            <p class="text-sm">Android Game</p>
         </div>
-        <a href="/muslim-raya" class="mt-auto mt-4">
-            <button class="border border-slate-900 rounded-lg px-4 py-2.5">Kunjungi Halaman</button>
-        </a>
+
+        <a href="/muslim-raya" class="rounded-lg px-4 py-2.5 w-max mt-4 bg-[#4970F4] text-sm font-bold text-white">Kunjungi Halaman</a>
     </div>
 </div>
 
