--- a/views/Muslim-Raya.ejs
+++ b/views/Muslim-Raya.ejs
@@ -4,7 +4,7 @@
 <div class="grid grid-cols-3 mt-10">
     <div class="m-5 p-5 rounded-lg border-slate-900 flex flex-col justify-between min-h-[200px] shadow-[rgba(0,_0,_0,_0.24)_0px_3px_8px]">
         <div class="">
-            <p class="font-bold">Create New Player</p>
+            <p class="font-bold">Login/Register Player</p>
             <p class="text-sm mt-2">METHOD: POST</p>
             <p class="text-sm">URL: https://api.festivo.co/muslim-raya/v1/players/</p>
         </div>
